Use binary wheel for epicscorelibs_pcas

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
     "epicscorelibs", 
-	"swig", 
-	"epicscorelibs_pcas @ git+https://github.com/IsisComputingGroup/epicscorelibs_pcas@main"
+    "swig", 
+    "epicscorelibs_pcas @ https://github.com/ISISComputingGroup/epicscorelibs_pcas/releases/download/v0.0.1/epicscorelibs_pcas-0.0.1a0-cp311-cp311-win_amd64.whl ; python_version == '3.11'"
 ]
