--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,5 +2,5 @@
 requires = [
     "epicscorelibs",
 	"swig",
-	"epicscorelibs_pcas @ git+https://github.com/IsisComputingGroup/epicscorelibs_pcas@68b1cf74bf676be52144268197c58d556966e6a3"
+	"epicscorelibs_pcas @ git+https://github.com/IsisComputingGroup/epicscorelibs_pcas@main"
 ]
